--- a/index.css
+++ b/index.css
@@ -1,3 +1,7 @@
+* {
+    font-family: Roobert, -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+}
+
 button {
     appearance: none;
     background-color: transparent;
@@ -54,6 +58,29 @@ button.hungup {
     background-color: rgb(201, 98, 88);
 }
 
+.container {
+    padding: 5px;
+    margin: 10px;
+    outline: 1px solid black;
+}
+
 .invisible {
+    display: none;
     visibility: hidden;
+}
+
+.send {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.send textarea {
+    width: 90%;
+    min-height: 50px;
+}
+
+.messages p span {
+    font-weight: 600;
 }
