--- a/public/index.css
+++ b/public/index.css
@@ -20,7 +20,6 @@ button {
     min-width: 0;
     outline: none;
     padding: 16px 24px;
-    margin: 8px;
     text-align: center;
     text-decoration: none;
     transition: all 300ms cubic-bezier(.23, 1, 0.32, 1);
@@ -58,9 +57,33 @@ button.hungup {
     background-color: rgb(201, 98, 88);
 }
 
+input {
+    appearance: none;
+    background-color: transparent;
+    border: 2px solid #1A1A1A;
+    border-radius: 15px;
+    box-sizing: border-box;
+    color: #3B3B3B;
+    cursor: pointer;
+    display: inline-block;
+    font-family: Roobert, -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+    font-size: 16px;
+    font-weight: 600;
+    line-height: normal;
+    margin: 0;
+    min-height: 60px;
+    min-width: 0;
+    outline: none;
+    padding: 16px 24px;
+    text-align: center;
+    width: 100%;
+    max-width: 200px;
+    min-width: 120px;
+}
+
 .container {
-    padding: 5px;
-    margin: 10px;
+    padding: 8px;
+    margin: 10px 0;
     outline: 1px solid black;
 }
 
@@ -83,4 +106,18 @@ button.hungup {
 
 .messages p span {
     font-weight: 600;
+}
+
+.room-id-input-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.room-id {
+    margin: 0;
+}
+
+.room-id-input-container label {
+    margin: 8px 0;
 }
